# EasyFFMPEG

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
